tests/ui/kindck/kindck-impl-type-params-2.stderr
error[E0277]: the trait bound `Box<{integer}>: Foo` is not satisfied
  --> $DIR/kindck-impl-type-params-2.rs:13:16
   |
LL |     take_param(&x);
   |     ---------- ^^ the trait `Copy` is not implemented for `Box<{integer}>`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `Box<{integer}>` to implement `Foo`
  --> $DIR/kindck-impl-type-params-2.rs:6:14
   |
LL | impl<T:Copy> Foo for T {
   |        ----  ^^^     ^
   |        |
   |        unsatisfied trait bound introduced here
note: required by a bound in `take_param`
  --> $DIR/kindck-impl-type-params-2.rs:9:17
   |
LL | fn take_param<T:Foo>(foo: &T) { }
   |                 ^^^ required by this bound in `take_param`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
